[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "kbyaml"
version = "0.0.1"
description = "Tools for storing YAML files in the OMIKB"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Owain Beynon", email = "o.beynon@ucl.ac.uk"}]
classifiers = [
     "Development Status :: 4 - Beta",
     "Programming Language :: Python"
]

dependencies = [
    "rdlib",
    "omikb @ git+https://github.com/H2020-OpenModel/OMIKB-toolbox.git",
    "discomat @ git+https://github.com/materials-discovery/discomat.git"
]

[project.urls]
repository = "https://github.com/H2020-OpenModel/KBYaml"

[tool.setuptools.packages.find]
where = ["."]
